@@ -107,12 +107,27 @@ public class FileConfigSource implements ConfigSource {
 
         @Override
         public Map<String, Object> toLongKeyMap() {
-            return Map.of();
+            Map<String, Object> flat = new LinkedHashMap<>();
+            flatten("", raw, flat);
+            return Collections.unmodifiableMap(flat);
         }
 
         @Override
         public boolean isEmpty() {
             return raw.isEmpty();
+        }
+
+        @SuppressWarnings("unchecked")
+        private static void flatten(String prefix, Map<String, Object> map, Map<String, Object> out) {
+            for (Map.Entry<String, Object> e : map.entrySet()) {
+                String key = prefix.isEmpty() ? e.getKey() : prefix + "." + e.getKey();
+                Object v = e.getValue();
+                if (v instanceof Map) {
+                    flatten(key, (Map<String, Object>) v, out);
+                } else {
+                    out.put(key, v);
+                }
+            }
         }
 
         @SuppressWarnings("unchecked")
